@@ -141,12 +141,30 @@ public class OneAuthTestApp extends App implements IFirstPartyApp {
         new AadPromptHandler(promptHandlerParameters).handlePrompt(username, password);
     }
 
+    public void handleSignInWithoutPrompt() {
+        UiAutomatorUtils.handleButtonClick("com.microsoft.oneauth.testapp:id/sign_in_button");
+        final String token = getTokenSecret();
+        Assert.assertTrue("Token is not empty", !TextUtils.isEmpty(token));
+        assertSuccess();
+    }
+
     public void handleBackButton() {
         UiAutomatorUtils.pressBack();
     }
 
     public void handleUserNameInput(@NonNull final String input) {
         UiAutomatorUtils.handleInput("com.microsoft.oneauth.testapp:id/account_hints_edittext", input);
+    }
+
+    public void handlePreferBrokerSwitchButton() {
+        UiAutomatorUtils.handleButtonClick("com.microsoft.oneauth.testapp:id/prefer_broker_switch_button");
+    }
+
+    public void selectFromAppConfiguration(@NonNull final String text) throws UiObjectNotFoundException {
+        final UiObject appConfigurationSpinner = UiAutomatorUtils.obtainUiObjectWithResourceId("com.microsoft.oneauth.testapp:id/app_configuration_spinner");
+        appConfigurationSpinner.click();
+        final UiObject appConfiguration = UiAutomatorUtils.obtainUiObjectWithText(text);
+        appConfiguration.click();
     }
 
     @Override
@@ -164,7 +182,6 @@ public class OneAuthTestApp extends App implements IFirstPartyApp {
             throw new AssertionError("Could not click on object with txt general info text");
         }
     }
-
 
     public void assertSuccess() {
         try {
